--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,10 +1,22 @@
 body{
     font-family: 'Overpass', sans-serif;
     color: black;
+    
 }
+
 .cajitaVideos{
     margin-top: 6px;
     margin-bottom: 6px;
     margin-right: 3px;
     margin-left: 3px;
+}
+.cajitaProductos{
+    margin-top: 6px;
+    margin-bottom: 6px;
+    margin-right: 3px;
+    margin-left: 3px;
+}
+.tamaImg{
+    width:240px ;
+    height: 310px;
 }
