--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,4 +1,3 @@
-
 .header {
     position: sticky;
     top: 0;
@@ -17,14 +16,16 @@
 .collapse > ul > li > a {
     color: #eeeeee;
     font-size: 1.5rem;
-    
+    font-family: 'Overpass', sans-serif;
+    font-weight: 100;
 }
 
 .dropdown-menu > a {
     background-color: #222831;
     color: #eeeeee;
     font-size: 1.5rem;
-   
+    font-family: 'Overpass', sans-serif;
+    font-weight: 100;
 }
 
 .otro > div {
@@ -34,7 +35,7 @@
 .form-inline > input {
     background: #eeeeee;
     font-size: 1.5rem;
-    font-weight: 400;
+    font-weight: 100;
     color: #eeeeee;
     border: #eeeeee solid 1px;
 }
@@ -42,7 +43,7 @@
 .form-inline > button {
     background-color: #222831;
     font-size: 1.5rem;
-    font-weight: 400;
+    font-weight: 100;
     color: #eeeeee;
     border: #eeeeee solid 1px;
 }
@@ -64,7 +65,7 @@
 .panel-footer {
     background-color: #222831;
     font-size: 1.5rem;
-    font-weight: 400;
+    font-weight: 100;
     color: #eeeeee;
 }
 
@@ -76,7 +77,6 @@
 body{
     font-family: 'Overpass', sans-serif;
     color: wheat;
-    
 }
 
 .cajitaVideos{
